--- a/_components/typography_headings.html
+++ b/_components/typography_headings.html
@@ -4,8 +4,14 @@ scss: '/_scss/base/typography.scss'
 type: typography
 ---
 <h1>This is a level one heading</h1>
+<h1>This is a level one <a href="">link</a></h1>
 <h2>This is a level two heading</h2>
+<h2>This is a level two <a href="">link</a></h2>
 <h3>This is a level three heading</h3>
+<h4>This is a level four <a href="">link</a></h4>
 <h4>This is a level four heading</h4>
+<h4>This is a level four <a href="">link</a></h4>
 <h5>This is a level five heading</h5>
+<h5>This is a level five <a href="">link</a></h5>
 <h6>This is a level six heading</h6>
+<h6>This is a level six <a href="">link</a></h6>
