--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@ layout: default
 
 <p>Boilerplate for creating components based style guides using <a href="http://jekyllrb.com">Jekyll</a>. Here is the <a href="https://github.com/jeromecoupe/jekyllstyleguide">Github repository</a> for it, should you want to have a peek at the code, fork it or report an issue.</p>
 
+{% comment %}
+
 {% assign entries = site.components %}
 {% for entry in entries %}
   {% include component.html %}
 {% endfor %}
 
-{% comment %}
+{% endcomment %}
 
+{% comment %}
 If you want to make sure your types are grouped (file names are not enough), you could use this group_by loop instead
+
 
 {% assign componentsByType = site.components | group_by:"type" %}
 {% for type in componentsByType %}
@@ -22,23 +26,31 @@ If you want to make sure your types are grouped (file names are not enough), you
     {% include component.html %}
   {% endfor %}
 {% endfor %}
-
 {% endcomment %}
-
 
 
 {% comment %}
 
 If you want to use pages and/or posts to create a more comple styleguide with pages / intros for every type of components, you can use these where loops on those pages / posts instead
+{% endcomment %}
 
+<h3 class="sg-h2">Cards</h3>
+{% assign entries = site.components | where:"type","cards" %}
+{% for entry in entries %}
+{% include component.html %}
+{% endfor %}
+
+<h3 class="sg-h2">Typography</h3>
+{% assign entries = site.components | where:"type","typography" %}
+{% for entry in entries %}
+    {% include component.html %}
+{% endfor %}
+
+<h3 class="sg-h2">Buttons</h3>
 {% assign entries = site.components | where:"type","buttons" %}
 {% for entry in entries %}
   {% include component.html %}
 {% endfor %}
 
-{% assign entries = site.components | where:"type","typography" %}
-{% for entry in entries %}
-  {% include component.html %}
-{% endfor %}
 
-{% endcomment %}
+
