--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1 class="sg-h1">Styleguide Template</h1>
+<h1 class="sg-h1">Simmone's styleguide</h1>
 
 <p>Boilerplate for creating components based style guides using <a href="http://jekyllrb.com">Jekyll</a>. Here is the <a href="https://github.com/jeromecoupe/jekyllstyleguide">Github repository</a> for it, should you want to have a peek at the code, fork it or report an issue.</p>
 
@@ -33,6 +33,12 @@ If you want to make sure your types are grouped (file names are not enough), you
 
 If you want to use pages and/or posts to create a more comple styleguide with pages / intros for every type of components, you can use these where loops on those pages / posts instead
 {% endcomment %}
+
+<h3 class="sg-h2">Grids</h3>
+{% assign entries = site.components | where:"type","grids" %}
+{% for entry in entries %}
+{% include component.html %}
+{% endfor %}
 
 <h3 class="sg-h2">Cards</h3>
 {% assign entries = site.components | where:"type","cards" %}
